--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ nav{
 }
 .bottom_navbar_main .navlist .slidebar li a{
     font-size: 1.8rem;
-    color: rgb(147, 143, 143);
+    color: rgb(30, 29, 29);
     padding: 10px 20px;
     font-weight: 700;
 
@@ -2179,6 +2179,7 @@ display: block;
         position: absolute;
         z-index: 200;
         background: none;
+        top: 15%;
        
     }
     .main-form .form form{
@@ -2233,15 +2234,17 @@ display: block;
 
 
 .main-form-2{
-            
     max-width: 1000px;
     width: 75%;
-   
     max-height: 747px;
-    height: 80%; 
-
- 
-    /* display: none; */
+    height: 80%;
+    /*display: none;
+    */
+    border-radius:50px ;
+    -webkit-border-radius:50px ;
+    -moz-border-radius:50px ;
+    -ms-border-radius:50px ;
+    -o-border-radius:50px ;
 }
 
 .main-form-2 .form{
@@ -2249,6 +2252,11 @@ display: block;
     position: absolute;
     z-index: 200;
     background: none;
+    top: 10%;
+    /* background-color: rgba(black, black, black, 0.2); */
+  
+ 
+    
    
 }
 .main-form-2 .form form{
@@ -2256,9 +2264,11 @@ display: block;
 }
 
 .main-form-2 figure{
-   z-index: 100;
+   /* z-index: 100; */
    opacity: 1;
    width: 100%;
+   
+ 
 }
 .main-form-2 .form form input{
     margin-bottom: 20px;
@@ -2283,6 +2293,12 @@ display: block;
 text-align: center;
 color: #000000; 
 
+}
+.main-form-2 .form .create {
+    width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .swiper-button-next,.swiper-button-prev{
